--- a/index.html
+++ b/index.html
@@ -38,10 +38,29 @@
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black">
-                    <i class="fa-solid fa-moon"></i></a>
+                    <i class="fa fa-moon"></i></a>
                 </li>
             </ul>
         </nav>
+        <header class="header">
+            <div class="header__content">
+                <h1 class="title">Hey I'm <span class="sky-color">Angel</span></h1>
+                <p class="header__para">
+                    I'm an aspiring <span class="sky-color">Frontend Software engineer</span> with a passion for building web applications with great user experiences.
+                </p>
+                <div class="social__list">
+                    <a href="https://www.linkedin.com/in/angel-vasquez-1b5788219/" target="_blank" class="social__link click">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="" target="_blank" class="social__link click">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                    <a href="https://github.com/MistySumo" target="_blank" class="social__link click">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </header>
     </section>
 </body>
 </html>
