--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     link__hover-effect
                     link__hover-effect--black">Contact</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link click">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -61,6 +61,18 @@
                 </div>
             </div>
         </header>
+        <button class="mail__btn click">
+            <i class="fas fa-file-pdf"></i>
+        </button>
+        <a href="#AboutMe" class="scroll">
+            <div class="scroll__icon click"></div>
+        </a>
+    </section>
+    <section id="about">
+        <h2>
+            About Me
+        </h2>
+
     </section>
 </body>
 </html>
