--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="" target="_blank" class="social__link click">
-                        <i class="fas fa-envelope"></i>
+                        <i class="fas fa-file-pdf"></i>
                     </a>
                     <a href="https://github.com/MistySumo" target="_blank" class="social__link click">
                         <i class="fab fa-github"></i>
@@ -62,16 +62,37 @@
             </div>
         </header>
         <button class="mail__btn click">
-            <i class="fas fa-file-pdf"></i>
+            <i class="fas fa-envelope"></i>
         </button>
-        <a href="#AboutMe" class="scroll">
+        <a href="#about" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
     </section>
     <section id="about">
         <h2>
-            About Me
+            About <span class="sky-color">Me</span> 
         </h2>
+        <div class="about__content">
+            <div class="about__img">
+                <img src="./assets/angel.jpeg" alt=""></img>
+            </div>
+            <div class="about__text">
+                <p class="about__para">
+                    Creating <span class="sky-color">responsive</span>, <span class="sky-color">customizable</span>, and <span class="sky-color">SEO-friendly</span> websites that led to positive User experiences.
+                    <br>
+                    <br>
+                    Im currently a <span class="sky-color">freelance</span> frontend developer whose worked with <span class="sky-color">international</span> clients towards business propositions. 
+                    <br>
+                    <br>
+                    If you want to learn more about me.
+                </p>
+                <button type="button" class="btn click">
+                    <a href="">
+                        Learn More
+                    </a>
+                </button>
+            </div>
+        </div>
 
     </section>
 </body>
