--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </h2>
         <div class="about__content">
             <div class="about__img">
-                <img src="./assets/angel.jpeg" alt=""></img>
+                <img src="./assets/angel.jpeg"  class="about__me--pic" alt=""></img>
             </div>
             <div class="about__text">
                 <p class="about__para">
@@ -86,11 +86,9 @@
                     <br>
                     If you want to learn more about me.
                 </p>
-                <button type="button" class="btn click">
-                    <a href="">
-                        Learn More
-                    </a>
-                </button>
+                <a href="">
+                <button type="button" class="btn click">Learn More</button>
+                </a>
             </div>
         </div>
 
