--- a/index.html
+++ b/index.html
@@ -93,5 +93,43 @@
         </div>
 
     </section>
+    <section id="tech__skills">
+        <h2>
+            My <span class="sky-color">Tech Stack</span>
+        </h2>
+        <div class="stack__wrapper">
+            <div class="tech__used">
+                <h3>
+                    My <span>Technologies</span>
+                </h3>
+                <div class="tech__icons">
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Devicon-html5-plain.svg/240px-Devicon-html5-plain.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/240px-CSS3_logo.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Javascript_Logo.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/270px-React-icon.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/240px-Tailwind_CSS_Logo.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg/240px-Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Three.js_Icon.svg/240px-Three.js_Icon.svg.png" alt="">
+                    </div>
+                    <div class="tech__icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Touchicon-180.png" alt="">
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
