--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angel Vasquez</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="http://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f9f8258128.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="landing-page">
@@ -93,41 +93,97 @@
         </div>
 
     </section>
-    <section id="tech__skills">
+    <section id="skills">
         <h2>
             My <span class="sky-color">Tech Stack</span>
         </h2>
         <div class="stack__wrapper">
             <div class="tech__used">
                 <h3>
-                    My <span>Technologies</span>
+                    My <span class="sky-color">Technologies</span>
                 </h3>
                 <div class="tech__icons">
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Devicon-html5-plain.svg/240px-Devicon-html5-plain.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Devicon-html5-plain.svg/240px-Devicon-html5-plain.svg.png" alt="">
+                        <span class="icon__name">HTML</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/240px-CSS3_logo.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/240px-CSS3_logo.svg.png" alt="">
+                        <span class="icon__name">CSS</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Javascript_Logo.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Javascript_Logo.png" alt="">
+                        <span class="icon__name">JavaScript</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/270px-React-icon.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/270px-React-icon.svg.png" alt="">
+                        <span class="icon__name">React.js</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/240px-Tailwind_CSS_Logo.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/240px-Tailwind_CSS_Logo.svg.png" alt="">
+                        <span class="icon__name">Tailwind.js</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg/240px-Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg/240px-Cib-next-js_%28CoreUI_Icons_v1.0.0%29.svg.png" alt="">
+                        <span class="icon__name">Next.js</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Three.js_Icon.svg/240px-Three.js_Icon.svg.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Three.js_Icon.svg/240px-Three.js_Icon.svg.png" alt="">
+                        <span class="icon__name">three.js</span>
                     </div>
                     <div class="tech__icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Touchicon-180.png" alt="">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/4/46/Touchicon-180.png" alt="">
+                        <span class="icon__name">Firebase</span>
                     </div> 
                 </div>
+            </div>
+            <div class="tech__learned">
+                <h3>
+                    <span class="sky-color">Technologies</span> Worked With/Learning
+                </h3>
+                <div class="tech__icons">
+                    <div class="tech__icon">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/277px-Vue.js_Logo_2.svg.png" alt="">
+                        <span class="icon__name">Vue.js</span>
+                    </div>
+                    <div class="tech__icon">
+                        <img class="tech__icon--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Sass_Logo_Color.svg/320px-Sass_Logo_Color.svg.png" alt="">
+                        <span class="icon__name">Sass</span>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h2 class="project__section--title">
+                    My <span class="sky-color">Projects</span>
+                </h2>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="../assets/LStore_SC.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Lily Pulseras
+                                </h3>
+                                <h4 class="project__description--sub--title">
+                                    HTML,CSS3
+                                </h4>
+                                <p class="project__description--para">
+                                    Lily Acessoria is a latina owned product store based in the Dominican Republic. A store managed and owned by a native of gurabo seeking to turn her buisness a nationwide phemenon. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://mistysumo.github.io/E-commerceFF/" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
