--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       emailjs.init("eXtzW9hvJQhRlnJN0");
    })();
 </script>
+<script src="app.js"></script>
 </head>
 <body>
     <section id="landing-page">
@@ -136,7 +137,7 @@
                     <br>
                     If you want to learn more about me.
                 </p>
-                <a href="" target="_blank">
+                <a href="../E-port/assets/" target="_blank">
                 <button type="button" class="btn click">Learn More</button>
                 </a>
             </div>
@@ -211,6 +212,50 @@
                     My <span class="sky-color">Projects</span>
                 </h2>
                 <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="../E-port/assets/LStore_SC.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Lily Pulseras
+                                </h3>
+                                <h4 class="project__description--sub--title">
+                                    HTML,CSS3
+                                </h4>
+                                <p class="project__description--para">
+                                    Lily Acessoria is a latina owned product store based in the Dominican Republic. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://mistysumo.github.io/E-commerceFF/" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="../E-port/assets/Google-Search-pic.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Lily Pulseras
+                                </h3>
+                                <h4 class="project__description--sub--title">
+                                    HTML,CSS3
+                                </h4>
+                                <p class="project__description--para">
+                                    Lily Acessoria is a latina owned product store based in the Dominican Republic. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="https://mistysumo.github.io/E-commerceFF/" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     <li class="project">
                         <div class="project__wrapper">
                             <img src="../assets/LStore_SC.png" class="project__img" alt="">
