error showing project stacks T1

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="../E-port/assets/LStore_SC.png" class="project__img" alt="">
+                            <img src="../assets/LStore_SC.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
@@ -236,14 +236,14 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="../E-port/assets/Google-Search-pic.png" class="project__img" alt="">
+                            <img src="../assets/Google-Search-pic.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Lily Pulseras
+                                    Google Search Engine
                                 </h3>
                                 <h4 class="project__description--sub--title">
-                                    HTML,CSS3
+                                    HTML,CSS,JavaScript,Next.Js,TailWind,
                                 </h4>
                                 <p class="project__description--para">
                                     Lily Acessoria is a latina owned product store based in the Dominican Republic. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
@@ -262,7 +262,7 @@
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Lily Pulseras
+                                    Discord Clone
                                 </h3>
                                 <h4 class="project__description--sub--title">
                                     HTML,CSS3
