--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="../assets/LStore_SC.png" class="project__img" alt="">
+                            <img src="./assets/LStore_SC.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
@@ -236,17 +236,17 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="../assets/Google-Search-pic.png" class="project__img" alt="">
+                            <img src="./assets/Google-Search-pic.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
                                     Google Search Engine
                                 </h3>
                                 <h4 class="project__description--sub--title">
-                                    HTML,CSS,JavaScript,Next.Js,TailWind,
+                                    HTML,JavaScript,Next.Js,TailWind,
                                 </h4>
                                 <p class="project__description--para">
-                                    Lily Acessoria is a latina owned product store based in the Dominican Republic. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
+                                    Google Clone made in next.js using tailwind to replicate goolge UI/Ux design. Using Google's API fetched data to display search results.
                                 </p>
                                 <div class="project__description--links">
                                     <a href="https://mistysumo.github.io/E-commerceFF/" class="project__description--link">
@@ -258,17 +258,17 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="../assets/LStore_SC.png" class="project__img" alt="">
+                            <img src="./assets/LStore_SC.png" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
                                     Discord Clone
                                 </h3>
                                 <h4 class="project__description--sub--title">
-                                    HTML,CSS3
+                                    HTML,CSS3,Gun.js,Sanity.io,
                                 </h4>
                                 <p class="project__description--para">
-                                    Lily Acessoria is a latina owned product store based in the Dominican Republic. As a developer I was intriuged on taking on the project to challenge both my skills in design and coding. This was one of my first projects using HTML,CCS3 and UI/UX design best practices for an international client. 
+                                    
                                 </p>
                                 <div class="project__description--links">
                                     <a href="https://mistysumo.github.io/E-commerceFF/" class="project__description--link">
